--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: spacemut
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Analysis of spatial mutation patterns.
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: person("Ruslan", "Soldatov", email = "Ruslan_Soldatov@hms.harvard.edu", role = c("cre","aut"))
+Maintainer: The package maintainer <Ruslan_Soldatov@hms.harvard.edu>
+Description: The package implements inference and analysis of mutational components using spatial modeling of mutation patterns.
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
